<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yuddi.inventoryapp.EditorActivity">

    <LinearLayout
        android:id="@+id/activity_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/editor_picture_imageview"
            style="@style/picture_style"
            android:contentDescription="@string/product_picture" />

        <TextView
            style="@style/editor_field_label"
            android:text="@string/field_name_label" />

        <EditText
            android:id="@+id/editor_name_edittext"
            style="@style/editor_edit_text"
            android:inputType="textCapSentences" />

        <TextView
            style="@style/editor_field_label"
            android:text="@string/field_quantity_label" />

        <EditText
            android:id="@+id/editor_quantity_edittext"
            style="@style/editor_edit_text"
            android:inputType="number" />

        <TextView
            style="@style/editor_field_label"
            android:text="@string/field_price_label" />

        <EditText
            android:id="@+id/editor_price_edittext"
            style="@style/editor_edit_text"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/editor_field_label"
            android:text="@string/field_description_label" />

        <EditText
            android:id="@+id/editor_description_edittext"
            style="@style/editor_edit_text"
            android:inputType="textMultiLine" />

        <TextView
            style="@style/editor_field_label"
            android:text="@string/field_phone_label" />

        <EditText
            android:id="@+id/editor_phone_edittext"
            style="@style/editor_edit_text"
            android:inputType="phone" />

        <TextView
            style="@style/editor_field_label"
            android:text="@string/field_email_label" />

        <EditText
            android:id="@+id/editor_email_edittext"
            style="@style/editor_edit_text"
            android:inputType="textEmailAddress" />

    </LinearLayout>

</ScrollView>